# edumatrix

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: knowledge_graph.py
backend/app/models/: user.py
db/mongodb/: connection.py
db/neo4j/: session.py
db/neo4j/init/: 01-schema.cypher  02-data.cypher
db/postgres/init/: 01-init.sql
frontend/: package-lock.json  package.json
frontend/src/components/common/: Navbar.jsx
frontend/src/routes/: index.jsx
